Update and rename Valentine.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/Assets/Valentine.css">
+  <link rel="stylesheet" href="Assets/style.css">
   <title>Valentine Online Shopping</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -42,7 +42,7 @@
     <h1 class="heading"> <span> about </span> us </h1>
     <div class="row">
       <div class="video-container">
-        <video style="width: 500px;" src="/Assets/1646768232.mp4" loop autoplay muted></video>
+        <video style="width: 500px;" src="Assets/1646768232.mp4" loop autoplay muted></video>
       </div>
       <div class="content">
         <h1>Why do you want to choose us</h1>
@@ -54,7 +54,7 @@
 
   <section class="icons-container">
     <div class="icons">
-      <img src="/Assets/delivery.png" alt="">
+      <img src="Assets/delivery.png" alt="">
       <div class="info">
         <h3>Free Delivery</h3>
         <span>For All Orders</span>
@@ -62,7 +62,7 @@
     </div>
 
     <div class="icons">
-      <img src="/Assets/offer.png" alt="">
+      <img src="Assets/offer.png" alt="">
       <div class="info">
         <h3>Mega Offer</h3>
         <span>For All Orders</span>
@@ -70,7 +70,7 @@
     </div>
 
     <div class="icons">
-      <img src="/Assets/return.png" alt="">
+      <img src="Assets/return.png" alt="">
       <div class="info">
         <h3>10 Days Returnable</h3>
         <span>For All Orders</span>
@@ -78,7 +78,7 @@
     </div>
 
     <div class="icons">
-      <img src="/Assets/payment.png" alt="">
+      <img src="Assets/payment.png" alt="">
       <div class="info">
         <h3>Secured Payment</h3>
         <span>For All Orders</span>
@@ -86,7 +86,7 @@
     </div>
 
     <div class="icons">
-      <img src="/Assets/trust.png" alt="">
+      <img src="Assets/trust.png" alt="">
       <div class="info">
         <h3>Trustable</h3>
         <span>For All Orders</span>
@@ -94,7 +94,7 @@
     </div>
 
     <div class="icons">
-      <img src="/Assets/quality.png" alt="">
+      <img src="Assets/quality.png" alt="">
       <div class="info">
         <h3>No 1 quality</h3>
         <span>For All Orders</span>
@@ -124,7 +124,7 @@
       <div class="box">
         <!-- <span class="discount">-10%</span> -->
         <div class="image">
-          <img src="/Assets/img 2.webp" alt="">
+          <img src="Assets/img 2.webp" alt="">
           <div class="icons">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="cart-btn">add to cart</a>
@@ -140,7 +140,7 @@
       <div class="box">
         <!-- <span class="discount">-10%</span> -->
         <div class="image">
-          <img src="/Assets/img3.webp" alt="">
+          <img src="Assets/img3.webp" alt="">
           <div class="icons">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="cart-btn">add to cart</a>
@@ -156,7 +156,7 @@
       <div class="box">
         <!-- <span class="discount">-10%</span> -->
         <div class="image">
-          <img src="/Assets/img 4.webp" alt="">
+          <img src="Assets/img 4.webp" alt="">
           <div class="icons">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="cart-btn">add to cart</a>
@@ -172,7 +172,7 @@
       <div class="box">
         <!-- <span class="discount">-10%</span> -->
         <div class="image">
-          <img src="/Assets/img 5.webp" alt="">
+          <img src="Assets/img 5.webp" alt="">
           <div class="icons">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="cart-btn">add to cart</a>
@@ -188,7 +188,7 @@
       <div class="box">
         <!-- <span class="discount">-10%</span> -->
         <div class="image">
-          <img src="/Assets/img 6.webp" alt="">
+          <img src="Assets/img 6.webp" alt="">
           <div class="icons">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="cart-btn">add to cart</a>
@@ -204,7 +204,7 @@
       <div class="box">
         <!-- <span class="discount">-10%</span> -->
         <div class="image">
-          <img src="/Assets/img 7.webp" alt="">
+          <img src="Assets/img 7.webp" alt="">
           <div class="icons">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="cart-btn">add to cart</a>
@@ -220,7 +220,7 @@
       <div class="box">
         <!-- <span class="discount">-10%</span> -->
         <div class="image">
-          <img src="/Assets/img 8.webp" alt="">
+          <img src="Assets/img 8.webp" alt="">
           <div class="icons">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="cart-btn">add to cart</a>
@@ -236,7 +236,7 @@
       <div class="box">
         <!-- <span class="discount">-10%</span> -->
         <div class="image">
-          <img src="/Assets/img 9.webp" alt="">
+          <img src="Assets/img 9.webp" alt="">
           <div class="icons">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="cart-btn">add to cart</a>
@@ -252,7 +252,7 @@
       <div class="box">
         <!-- <span class="discount">-10%</span> -->
         <div class="image">
-          <img src="/Assets/img 10.webp" alt="">
+          <img src="Assets/img 10.webp" alt="">
           <div class="icons">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="cart-btn">add to cart</a>
@@ -304,7 +304,7 @@
         <div class="footerRightMenu">
             <h1 class="fMenuTitle">Subscribe to our newsletter</h1>
             <div class="fMail">
-                <input type="text" placeholder="your@email.com" class="fInput">
+                <input type="text" placeholder="gokul@email.com" class="fInput">
                 <button class="fButton">Join!</button>
             </div>
         </div>
@@ -312,10 +312,10 @@
             <h1 class="fMenuTitle">Follow Us</h1>
             <br>
             <div class="fIcons">
-                <img src="/Assets/Rounded_Facebook_svg-256.webp" alt="" class="fIcon">
-                <img src="/Assets/Rounded_Instagram_svg-256.webp" alt="" class="fIcon">
-                <img src="/Assets/Rounded_Twitter5_svg-256.webp" alt="" class="fIcon">
-                <img src="/Assets/Rounded_Whatsapp_svg-256.webp" alt="" class="fIcon">
+                <img src="Assets/Rounded_Facebook_svg-256.webp" alt="" class="fIcon">
+                <img src="Assets/Rounded_Instagram_svg-256.webp" alt="" class="fIcon">
+                <img src="Assets/Rounded_Twitter5_svg-256.webp" alt="" class="fIcon">
+                <img src="Assets/Rounded_Whatsapp_svg-256.webp" alt="" class="fIcon">
             </div>
         </div>
         <div class="footerRightMenu">
