--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="box">
         <!-- <span class="discount">-10%</span> -->
         <div class="image">
-          <img src="/Assets/img 1.webp" alt="">
+          <img src="Assets/img 1.webp" alt="">
           <div class="icons">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="cart-btn">add to cart</a>
